--- a/.github/workflows/basic-docker-build.yaml
+++ b/.github/workflows/basic-docker-build.yaml
@@ -12,8 +12,8 @@ jobs:
     name: Build image
     runs-on: ubuntu-latest
     steps:
-      - name: Docker Hub login
-        uses: docker/login-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -23,3 +23,5 @@ jobs:
         with:
           push: ${{ github.event_name != 'pull_request' }}
           tags: fdidustintaylor/basic-docker-build:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max          
