--- a/.github/workflows/basic-docker-build.yaml
+++ b/.github/workflows/basic-docker-build.yaml
@@ -18,6 +18,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}          
+
       - name: Docker build
         uses: docker/build-push-action@v3
         with:
