--- a/.github/workflows/basic-docker-build.yaml
+++ b/.github/workflows/basic-docker-build.yaml
@@ -31,7 +31,7 @@ jobs:
         id: docker_meta
         uses: docker/metadata-action@v5
         with:
-          images: fdidustintaylor/basic-docker-build:latest
+          images: fdidustintaylor/basic-docker-build
           flavor: |
             latest=false
           tags: |
