--- a/.github/workflows/basic-docker-build.yaml
+++ b/.github/workflows/basic-docker-build.yaml
@@ -44,6 +44,14 @@ jobs:
           cache-to: type=gha,mode=max
           platforms: linux/amd64
 
+        # for more advanced tests, use docker compose with `depends_on`
+          # NOTE: GHA and other CIs can also run dependency containers on their own
+          # GHA `services:` can do this if you're trying to avoid docker compose
+      - name: Test healthcheck in Docker Compose
+        run: |
+          export TESTING_IMAGE="${{ github.run_id }}"
+          docker compose -f docker-compose.test.yml up --exit-code-from sut          
+
       - name: Run Trivy for all CVEs (non-blocking)
         uses: aquasecurity/trivy-action@master
         with:
