--- a/.github/workflows/basic-docker-build.yaml
+++ b/.github/workflows/basic-docker-build.yaml
@@ -1,5 +1,5 @@
 ---
-name: 07 Build and Scan + Report
+name: 09 Build and Integration Test
 
 on:
   push:
@@ -11,10 +11,6 @@ jobs:
   build-image:
     name: Build Images
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
 
     steps:
 
@@ -50,36 +46,7 @@ jobs:
       - name: Test healthcheck in Docker Compose
         run: |
           export TESTING_IMAGE="${{ github.run_id }}"
-          docker compose -f docker-compose.test.yml up --exit-code-from sut          
-
-      - name: Run Trivy for all CVEs (non-blocking)
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ github.run_id }}
-          format: table 
-          exit-code: 0
-
-        # for simple tests (npm test, etc.) just run a local image in docker
-      - name: Unit Testing in Docker
-        run: |
-          docker run --rm ${{ github.run_id }} echo "run test commands here"          
-
-      - name: Run Trivy for HIGH,CRITICAL CVEs and report (blocking)
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ github.run_id }}
-          exit-code: 1
-          ignore-unfixed: true
-          vuln-type: 'os,library'
-          severity: 'HIGH,CRITICAL'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-      
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
+          docker compose -f docker-compose.test.yml up --exit-code-from sut
 
       - name: Docker Metadata for Final Image Build
         id: docker_meta
@@ -89,7 +56,7 @@ jobs:
           flavor: |
             latest=false
           tags: |
-            type=raw,value=07
+            type=raw,value=09
           # comment these out on all but 04-add-metadata.yaml to avoid overwriting image tags
           # type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
           # type=ref,event=pr
